integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_tests__mpl_core_search_assets_by_owner-search-assets-fungible.snap
---
source: integration_tests/tests/integration_tests/mpl_core_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 0,
  "limit": 1000,
  "items": []
}
